--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
         run: dotnet build ./src/eShopApp.Catalog/eShopApp.Catalog.sln --configuration Release --no-restore
         
       - name: Publish
-        run: dotnet publish ./src/eShopApp.Catalog/eShopApp.Catalog.sln --configuration Release --no-build
+        run: dotnet publish ./src/eShopApp.Catalog/eShopApp.Catalog.sln --configuration Release --no-restore
