--- a/src/eShopApp.Catalog/eShopApp.Catalog.App/appsettings.Development.json
+++ b/src/eShopApp.Catalog/eShopApp.Catalog.App/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "ConnectionString": "Server=localhost\\MSSQLSERVER01;Database=EShopCatalogDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
