--- a/src/eShopApp.Catalog/eShopApp.Catalog.Domain/eShopApp.Catalog.Domain.csproj
+++ b/src/eShopApp.Catalog/eShopApp.Catalog.Domain/eShopApp.Catalog.Domain.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
   </ItemGroup>
 
 </Project>
