--- a/src/eShopApp.Shared/eShopApp.MessageBroker/eShopApp.MessageBroker.csproj
+++ b/src/eShopApp.Shared/eShopApp.MessageBroker/eShopApp.MessageBroker.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="eShopApp.MessageBroker" Version="1.0.0" />
+    <PackageReference Include="Autofac" Version="7.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Polly" Version="8.1.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
   </ItemGroup>
 
 </Project>
