--- a/src/eShopApp.Basket/eShopApp.Basket.Contract/eShopApp.Basket.Contract.csproj
+++ b/src/eShopApp.Basket/eShopApp.Basket.Contract/eShopApp.Basket.Contract.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="eShopApp.MessageBroker" Version="1.0.1" />
+  </ItemGroup>
 
 </Project>
